# rust-extensions

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: test.yml
benches/: sorted_vec_vs_hashmap.rs
macros/: Cargo.toml
macros/src/: lib.rs  utils.rs
rust-extensions/: Cargo.toml
rust-extensions/src/: application_states.rs  atomic_duration.rs  base64.rs  is_initialized.rs  lib.rs  max_value.rs  maybe_short_string.rs  min_value.rs  short_string.rs  sortable_id.rs  str_or_string.rs  str_utils.rs
src/: application_states.rs  as_slice_or_vec.rs  as_str.rs  as_u8_slice.rs  atomic_duration.rs  atomic_stop_watch.rs  binary_payload_builder.rs  binary_search.rs  duration_utils.rs  file_utils.rs  hex.rs  lib.rs  logger.rs  max_value.rs  maybe_short_string.rs  min_key_value.rs  min_value.rs  placeholders.rs  short_string.rs  slice_of_u8_utils.rs  sortable_id.rs  stop_watch.rs  str_or_string.rs  str_utils.rs  string_builder.rs  to_hash_map.rs  uint32_variable_size.rs  unsafe_value.rs  url_utils.rs
src/array_of_bytes_iterator/: array_of_bytes_iterator.rs  file_iterator.rs  mod.rs  slice_iterator.rs  vec_iterator.rs
src/as_slice_or_vec/: as_slice_or_vec.rs  slice_or_vec_seq_reader.rs
src/auto_shrink/: mod.rs  vec_auto_shrink.rs  vec_deque_auto_shrink.rs
src/date_time/: as_microseconds.rs  as_microseconds_atomic.rs  compact_date_time.rs  date_time_duration.rs  date_time_struct.rs  hour_key.rs  mod.rs  rfc2822.rs  rfc_3339.rs  rfc_5322.rs  time_difference.rs  time_struct.rs  utils.rs
src/events_loop/: events_loop.rs  events_loop_inner.rs  events_loop_logger.rs  events_loop_mutex_wrapped.rs  events_loop_publisher.rs  events_loop_tick.rs  mod.rs
src/file_utils/: file_path.rs  file_utils.rs
src/grouped_data/: grouped_data_as_btreemap.rs  grouped_data_as_hashmap.rs  mod.rs
src/hex/: hex_u8.rs  mod.rs  utils.rs
src/lazy/: lazy_group_into_btreemap.rs  lazy_group_into_hashmap.rs  lazy_hash_map.rs  lazy_vec.rs  mod.rs
src/linq/: mod.rs  to_hash_map.rs
src/logger/: log_event_ctx.rs  logger.rs  mod.rs
src/my_timer/: mod.rs  my_timer.rs  my_timer_logger.rs  my_timer_tick.rs
src/objects_pool/: object_pool.rs  object_pool_inner.rs  rented_object.rs
src/queue_to_save/: async_waker.rs  inner.rs  inner_as_bulk.rs  inner_as_single.rs  mod.rs  queue_to_save.rs
src/remote_endpoint/: remote_endpoint_host_string.rs  (+2 more)
(+145 files in other folders)
