[package]
name = "rust-extensions"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["with-tokio"]
objects-pool = []
base64 = ["dep:base64"]
hex = ["dep:hex"]
with-tokio = ["tokio", "signal-hook"]
vec-maybe-stack = []

[dependencies]
tokio = { version = "*", features = ["full"], optional = true }
chrono = "*"
async-trait = "*"
signal-hook = { version = "*", optional = true }
base64 = { version = "*", optional = true }
serde = { version = "*", features = ["derive"] }
hex = { version = "*", optional = true }

[dev-dependencies]
serde_json = "*"
