[package]
name = "rust-extensions"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
objects-pool = []
base64 = ["dep:base64"]
hex = []
with-tokio = ["tokio", "signal-hook", "futures"]

vec-maybe-stack = []
placeholders = []

[dependencies]
tokio = { version = "*", features = ["full"], optional = true }
futures = { version = "*", optional = true }
chrono = "*"
async-trait = "*"
signal-hook = { version = "*", optional = true }
base64 = { version = "*", optional = true }
serde = { version = "*", features = ["derive"] }
uuid = { version = "*", features = ["v4"] }

[dev-dependencies]
serde_json = "*"
criterion = "*"


[[bench]]
name = "sorted_vec_vs_hashmap"
harness = false
