[package]
name = "rust-extensions"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
objects-pool = []
base64 = ["dep:base64"]
hex = []
with-tokio = ["tokio", "signal-hook", "futures", "uuid"]

vec-maybe-stack = []


[dependencies]
tokio = { version = "*", features = [
    "time",
    "sync",
    "rt",
    "io-util",
    "fs",
], optional = true }
futures = { version = "*", optional = true }
chrono = "*"
async-trait = "*"
signal-hook = { version = "*", optional = true }
base64 = { version = "*", optional = true }
serde = { version = "*", features = ["derive"] }
uuid = { version = "*", features = ["v4"], optional = true }

[dev-dependencies]
serde_json = "*"
criterion = "*"
